<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milton Academy</string>
    <string name="thumbs_up">Thumbs Up!</string>
    <string name="thumbs_down">Thumbs Down!</string>
    <string name="string_Back">Back</string>
    <string name="desc_comment">Leave a comment...</string>
    <string name="dummy_content">Dummy Content</string>
    <string name="string_Welcome">Welcome to Milton Academy</string>

    <!-- Login -->
    <string name="string_Login">Login</string>
    <string name="string_Username">Username</string>
    <string name="string_Password">Password</string>
    <string name="string_Sign_In">Sign In</string>
    <string name="settings_login_errorInvalidUsername">Please enter your myMilton username</string>
    <string name="settings_login_errorInvalidPassword">Please enter your myMilton password</string>
    <string name="string_Teacher">Teacher</string>
    <string name="string_Student">Student</string>
    <string name="settings_login_viewHelperText">Login with your MyMilton Credentials</string>
    <string name="settings_login_typeHelperText">I am a:</string>

    <!-- Logout -->
    <string name="string_Logout">Logout</string>

    <!-- FLIK -->
    <string name="string_FLIK">FLIK</string>
    <string name="title_activity_tabs_test">Flik Menu</string>
    <string name="placeholder_string">[placeholder]</string>
    <string name="long_placeholder">This string is very long. It might even have to be two lines long. That would be ok though.</string>
    <string name="altview">This is simply an alternative view</string>

    <!-- SAA -->
    <string name="string_SAA">SAA</string>
    <string name="string_Select_Date">Select Date</string>
    <string name="string_Filter_Events">Filter Events</string>
    <string name="string_Dont_Show_Again">Don\'t Show Again</string>
    <string name="string_Refresh">Refresh</string>
    <string name="title_activity_door_lock">Door Lock</string>
    <string name="title_activity_bus_pass">Bus Pass</string>
    <string name="title_activity_navigator">Navigator</string>
    <string name="title_activity_school_events">School Events</string>
    <string name="string_Event_Icon">Event Icon</string>
    <string name="string_Mailbox">Mailbox</string>
    <string name="title_activity_athletics">Athletics</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainScreenTitle">Milton Academy</string>
    <string name="action_back">Back</string>
    <string name="blank_string"></string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_saaschedule">SAA Schedule</string>
    <string name="event_description_placeholder">This is an event discription, and as such, is likely to be quite long. Wow! Such longness! So many multiple word sentences, likely requiring smooth handling of line breaking and content wrapping and all the other things that android will do for us, right?</string>
    <string name="flik">FLIK</string>
    <string name="saa">SAA</string>
    <string name="settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_maapp">MA App</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_settings">Settings</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="signing_in">Signing in</string>
    <string name="password_reset">Password Reset</string>
    <string name="submit">Submit</string>
    <string name="goToLogin">Go to Login</string>
    <string name="go_to_register">Go to Register</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campus_doorlock_fragment_Helper">Please Select a Lock</string>

</resources>
