<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="edu.milton.miltonmobileandroid.home.HomeActivity">
    <item android:id="@+id/action_door_lock" android:title="@string/title_activity_door_lock" android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_login" android:title="@string/string_Login"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/string_Logout"
          android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/string_About"
          android:orderInCategory="300" app:showAsAction="never" />
</menu>
