<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.milton.miltonmobileandroid.saaEvents.saa.SaaActivity">
    <item android:id="@+id/action_refresh" android:title="@string/string_Refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_refresh"
        />
    <item android:id="@+id/action_select_date" android:title="@string/string_Select_Date"
        android:orderInCategory="200" android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_go_to_today" />
    <item android:id="@+id/action_filter_events" android:title="@string/string_Filter_Events"
        android:icon="@drawable/ic_action_sort_by_size" android:showAsAction="ifRoom"
        android:orderInCategory="300" />
</menu>
