<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/food_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/good_button"
        android:paddingLeft="10dp"
        android:text="@string/long_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12sp"
        android:typeface="normal"
        android:ellipsize="marquee"      
 		android:marqueeRepeatLimit="marquee_forever"
 		android:scrollHorizontally="true" />

    <ImageButton
        android:id="@+id/good_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/bad_button"
        android:background="@color/white"
        android:contentDescription="@string/thumbs_up"
        android:src="@drawable/ic_action_good" />

    <ImageButton
        android:id="@+id/bad_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/ApacheTextView"
        android:background="@color/white"
        android:contentDescription="@string/thumbs_down"
        android:src="@drawable/ic_action_bad" />

    <TextView
        android:id="@+id/ApacheTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/food_text_view"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
